RESOLVED FIXED144388
REGRESSION(r182573): [GTK] The default context menu contains an empty item since r182573
https://bugs.webkit.org/show_bug.cgi?id=144388
Summary REGRESSION(r182573): [GTK] The default context menu contains an empty item si...
Carlos Garcia Campos
Reported 2015-04-29 06:39:21 PDT
There used to be a method in ContextMenuItem to check if share menu item was supported or not, but since r182573, there's a method to get the share menu item. If the returned menu item is null, it's not added to the menu, but we are not returning a null ContextMenu item even though we don't support share menu item.
Attachments
Patch (5.39 KB, patch)
2015-04-29 06:41 PDT, Carlos Garcia Campos
beidson: review+
Carlos Garcia Campos
Comment 1 2015-04-29 06:41:50 PDT
Carlos Garcia Campos
Comment 2 2015-04-29 08:51:04 PDT
Note You need to log in before you can comment on or make changes to this bug.