REGRESSION(r182573): [GTK] The default context menu contains an empty item since r182573 https://bugs.webkit.org/show_bug.cgi?id=144388

Reviewed by Brady Eidson.

Source/WebCore:

There used to be a method in ContextMenuItem to check if share
menu item was supported or not, but since r182573, there's a
method to get the share menu item. If the returned menu item is
null, it's not added to the menu, but we are not returning a null
ContextMenu item even though we don't support share menu item.

* platform/gtk/ContextMenuItemGtk.cpp:
(WebCore::ContextMenuItem::shareMenuItem): Return a null ContextMenuItem.

Source/WebKit2:

Move the WebContextMenuClient::shareMenuItem() implementation to
platform files, since platforms not supporting share menu item
should return a null ContextMenuIem instead.

* WebProcess/WebCoreSupport/WebContextMenuClient.cpp:
(WebKit::WebContextMenuClient::shareMenuItem): Deleted.
* WebProcess/WebCoreSupport/efl/WebContextMenuClientEfl.cpp:
(WebKit::WebContextMenuClient::shareMenuItem):
* WebProcess/WebCoreSupport/gtk/WebContextMenuClientGtk.cpp:
(WebKit::WebContextMenuClient::shareMenuItem):
* WebProcess/WebCoreSupport/mac/WebContextMenuClientMac.mm:
(WebKit::WebContextMenuClient::shareMenuItem):

Canonical link: https://commits.webkit.org/162392@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183547 268f45cc-cd09-0410-ab3c-d52691b4dbfc