Source/WebKit2/WebProcess/WebCoreSupport/efl/WebContextMenuClientEfl.cpp
@@ -56,5 +56,10 @@ void WebContextMenuClient::stopSpeaking()
     notImplemented();
 }
 
+ContextMenuItem WebContextMenuClient::shareMenuItem(const HitTestResult&)
+{
+    return ContextMenuItem();
+}
+
 } // namespace WebKit
 #endif // ENABLE(CONTEXT_MENUS)
